unpackaged/main/default/objects/Opportunity/fields/HubSpot_Owner__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Owner__c</fullName>
    <label>HubSpot Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>