unpackaged/main/default/objects/Opportunity/fields/Important_Factors_in_Selection_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Important_Factors_in_Selection_Legacy__c</fullName>
    <inlineHelpText>This is legacy data from submissions prior to 11-13-2020.</inlineHelpText>
    <label>z_Important Factors in Selection Legacy</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>