unpackaged/main/default/objects/Opportunity/fields/Interview_Stage__c.field-meta.xml
<CustomField>
    <fullName>Interview_Stage__c</fullName>
    <description>(same as convert date)</description>
    <inlineHelpText>Same as Convert Date</inlineHelpText>
    <label>z_Interview Stage</label>
    <type>Date</type>
</CustomField>