unpackaged/main/default/objects/Opportunity/fields/Interview_Stage_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Interview_Stage_Boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Interview Stage</label>
    <type>Checkbox</type>
</CustomField>