unpackaged/main/default/objects/Opportunity/fields/Interview_Stage_Date__c.field-meta.xml
<CustomField>
    <fullName>Interview_Stage_Date__c</fullName>
    <label>Interview Stage Date</label>
    <type>Date</type>
</CustomField>