unpackaged/main/default/objects/Opportunity/fields/Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that invoice has been sent to the student</description>
    <inlineHelpText>Indicates that invoice has been sent to the student</inlineHelpText>
    <label>Invoiced</label>
    <type>Checkbox</type>
</CustomField>