unpackaged/main/default/objects/Opportunity/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <label>z_IP Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>