unpackaged/main/default/objects/Opportunity/fields/Is_Cost_a_Concern__c.field-meta.xml
<CustomField>
    <fullName>Is_Cost_a_Concern__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Is Cost a Concern?</label>
    <type>Checkbox</type>
</CustomField>