unpackaged/main/default/objects/Opportunity/fields/isOpen__c.field-meta.xml
<CustomField>
    <fullName>isOpen__c</fullName>
    <formula>IF ( 
AND(

 NOT(ISPICKVAL(StageName , &quot;Closed Won&quot;)), 
 NOT(ISPICKVAL(StageName , &quot;Closed Lost&quot;)), 
 NOT(ISPICKVAL(StageName , &quot;Closed Won (Enrolled)&quot;))), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isOpen</label>
    <type>Checkbox</type>
</CustomField>