unpackaged/main/default/objects/Opportunity/fields/Last_Family_Admissions_Call_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Family_Admissions_Call_Date_Time__c</fullName>
    <description>When the opportunity entered the Family Admissions Call stage most recently</description>
    <label>Last Family Admissions Call Date/Time</label>
    <type>DateTime</type>
</CustomField>