unpackaged/main/default/objects/Opportunity/fields/Last_Requirements_Gathering_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Requirements_Gathering_Date_Time__c</fullName>
    <description>When the opportunity entered the Requirements Gathering stage most recently</description>
    <label>Last Requirements Gathering Date/Time</label>
    <type>DateTime</type>
</CustomField>