unpackaged/main/default/objects/Opportunity/fields/Leadership_Award_Amount__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Award_Amount__c</fullName>
    <description>Verto-funded financial aid (not federal aid)</description>
    <label>Leadership Award Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>