unpackaged/main/default/objects/Opportunity/fields/Letter_of_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Letter_of_Recommendation__c</fullName>
    <description>This field is populated from the College Planning Form.</description>
    <inlineHelpText>This field is populated from the College Planning Form.</inlineHelpText>
    <label>z_Letter of Recommendation</label>
    <type>Url</type>
</CustomField>