unpackaged/main/default/objects/Opportunity/fields/Loss_of_Income_Doc_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Loss_of_Income_Doc_Legacy__c</fullName>
    <label>z_Loss of Income Doc (Legacy)</label>
    <type>Url</type>
</CustomField>