unpackaged/main/default/objects/Opportunity/fields/Loss_of_Income_Proof__c.field-meta.xml
<CustomField>
    <fullName>Loss_of_Income_Proof__c</fullName>
    <label>z_Loss of Income Proof</label>
    <type>Url</type>
</CustomField>