unpackaged/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admission Denied by Verto</fullName>
            </value>
            <value>
                <fullName>Chose Alternate Source</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Course Credit Redundancy</fullName>
            </value>
            <value>
                <fullName>Different Route</fullName>
            </value>
            <value>
                <fullName>Discomfort with Travel</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Family Needs</fullName>
            </value>
            <value>
                <fullName>Going Straight to Traditional College</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>Mental/physical health</fullName>
                <label>Mental/Physical Health</label>
            </value>
            <value>
                <fullName>Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Parents Veto</fullName>
            </value>
            <value>
                <fullName>Political/Religious Difference</fullName>
            </value>
            <value>
                <fullName>Pulled from Waitlist</fullName>
            </value>
            <value>
                <fullName>Safety Concerns</fullName>
            </value>
            <value>
                <fullName>Too Old</fullName>
            </value>
            <value>
                <fullName>Closed Admin</fullName>
            </value>
            <value>
                <fullName>Affordability issues</fullName>
                <isActive>false</isActive>
                <label>Affordability issues</label>
            </value>
            <value>
                <fullName>Affording Partner College Options</fullName>
                <isActive>false</isActive>
                <label>Affording Partner College Options</label>
            </value>
            <value>
                <fullName>Choosing work</fullName>
                <isActive>false</isActive>
                <label>Choosing work</label>
            </value>
            <value>
                <fullName>College acceptance won&#39;t allow credit to be earned while on deferment</fullName>
                <isActive>false</isActive>
                <label>College acceptance won&#39;t allow credit to be earned while on deferment</label>
            </value>
            <value>
                <fullName>Lost to competitor (other travel semester, study abroad, gap)</fullName>
                <isActive>false</isActive>
                <label>Lost to competitor (other travel semester, study abroad, gap)</label>
            </value>
            <value>
                <fullName>Low GPA, cannot enroll in RBC</fullName>
                <isActive>false</isActive>
                <label>Low GPA, cannot enroll in RBC</label>
            </value>
            <value>
                <fullName>NPC won&#39;t accept Verto credits</fullName>
                <isActive>false</isActive>
                <label>NPC won&#39;t accept Verto credits</label>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
                <isActive>false</isActive>
                <label>No Budget / Lost Funding</label>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
                <isActive>false</isActive>
                <label>No Decision / Non-Responsive</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Other non-verto college options were more affordable</fullName>
                <isActive>false</isActive>
                <label>Other non-verto college options were more affordable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>