unpackaged/main/default/objects/Opportunity/fields/Matriculated__c.field-meta.xml
<CustomField>
    <fullName>Matriculated__c</fullName>
    <formula>Enrollment_Record__r.Matriculated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matriculated</label>
    <type>Checkbox</type>
</CustomField>