unpackaged/main/default/objects/Opportunity/fields/Med_Ed_Fam_Expense_Doc_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Med_Ed_Fam_Expense_Doc_Legacy__c</fullName>
    <label>z_Med, Ed, Fam Expense Doc Legacy</label>
    <type>Url</type>
</CustomField>