unpackaged/main/default/objects/Opportunity/fields/Mental_Health_Questionnaire_Submitted_On__c.field-meta.xml
<CustomField>
    <fullName>Mental_Health_Questionnaire_Submitted_On__c</fullName>
    <label>Mental Health Questionnaire Submitted On</label>
    <type>Date</type>
</CustomField>