unpackaged/main/default/objects/Opportunity/fields/Merit_Award_Amount__c.field-meta.xml
<CustomField>
    <fullName>Merit_Award_Amount__c</fullName>
    <description>Verto-funded financial aid (not federal aid)</description>
    <label>Merit Award Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>