unpackaged/main/default/objects/Opportunity/fields/Most_Recent_Admitted_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Admitted_Date_Time__c</fullName>
    <description>When the opportunity entered the Admitted stage most recently</description>
    <label>Most Recent Admitted Date/Time</label>
    <type>DateTime</type>
</CustomField>