unpackaged/main/default/objects/Opportunity/fields/Most_Recent_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Call_Date__c</fullName>
    <description>The date of the last logged call</description>
    <inlineHelpText>The date of the last logged call</inlineHelpText>
    <label>Most Recent Call Date</label>
    <type>Date</type>
</CustomField>