unpackaged/main/default/objects/Opportunity/fields/Most_Recent_Consideration_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Consideration_Date_Time__c</fullName>
    <description>When the opportunity entered the Consideration stage most recently</description>
    <label>Most Recent Consideration Date/Time</label>
    <type>DateTime</type>
</CustomField>