unpackaged/main/default/objects/Opportunity/fields/Most_Recent_Decision_Ready_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Decision_Ready_Date_Time__c</fullName>
    <description>When the opportunity entered the Decision Ready stage most recently</description>
    <label>Most Recent Decision Ready Date/Time</label>
    <type>DateTime</type>
</CustomField>