unpackaged/main/default/objects/Opportunity/fields/Most_Recent_Deposit_Received_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Deposit_Received_Date_Time__c</fullName>
    <description>When the opportunity entered the Deposit Received stage most recently</description>
    <label>Most Recent Deposit Received Date/Time</label>
    <type>DateTime</type>
</CustomField>