unpackaged/main/default/objects/Opportunity/fields/Most_Recent_Qualification_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Qualification_Date_Time__c</fullName>
    <description>When the opportunity entered the Qualification stage most recently</description>
    <label>Most Recent Qualification Date/Time</label>
    <type>DateTime</type>
</CustomField>