unpackaged/main/default/objects/Opportunity/fields/Most_Recent_Qualified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Qualified_Date_Time__c</fullName>
    <description>When the opportunity entered the Qualified stage most recently</description>
    <label>Most Recent Qualified Date/Time</label>
    <type>DateTime</type>
</CustomField>