unpackaged/main/default/objects/Opportunity/fields/Most_Recent_Send_EA_Link_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Send_EA_Link_Date_Time__c</fullName>
    <label>Most Recent Send EA Link Date/Time</label>
    <type>DateTime</type>
</CustomField>