unpackaged/main/default/objects/Opportunity/fields/Most_Recent_Send_Student_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Send_Student_Acceptance__c</fullName>
    <label>Last Send Student Acceptance Date/Time</label>
    <type>DateTime</type>
</CustomField>