unpackaged/main/default/objects/Opportunity/fields/Net_Tuition__c.field-meta.xml
<CustomField>
    <fullName>Net_Tuition__c</fullName>
    <description>Tuition minus Total Discounts Amount, Opportunity Grant Amount, Leadership Award Amount, Merit Award Amount &amp; CTW Grant Amount</description>
    <formula>Tuition__c -  Total_Discounts_Amount__c  -  Opportunity_Grant_Amount__c - Leadership_Award_Amount__c - Merit_Award_Amount__c -   CTW_Grant_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Tuition minus Total Discounts Amount, Opportunity Grant Amount, Leadership Award Amount, Merit Award Amount &amp; CTW Grant Amount</inlineHelpText>
    <label>Net Tuition</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>