unpackaged/main/default/objects/Opportunity/fields/Net_Tuition_Istanbul__c.field-meta.xml
<CustomField>
    <fullName>Net_Tuition_Istanbul__c</fullName>
    <formula>Tuition__c - Discount_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Tuition - Discount Total</inlineHelpText>
    <label>Net Tuition</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>