unpackaged/main/default/objects/Opportunity/fields/New_Lead_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Lead_Date__c</fullName>
    <label>New Lead Date</label>
    <type>Date</type>
</CustomField>