unpackaged/main/default/objects/Opportunity/fields/Nominators_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Nominators_Feedback__c</fullName>
    <label>z_Nominator&#39;s Feedback</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>