unpackaged/main/default/objects/Opportunity/fields/Number_of_Calls__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Calls__c</fullName>
    <description>Number of logged calls</description>
    <inlineHelpText>Number of logged calls</inlineHelpText>
    <label>Number of Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>