unpackaged/main/default/objects/Opportunity/fields/Old_Interest_Level__c.field-meta.xml
<CustomField>
    <fullName>Old_Interest_Level__c</fullName>
    <label>z_OLD HS Interest Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>