unpackaged/main/default/objects/Opportunity/fields/Opp_Grant_App_Submitted_On__c.field-meta.xml
<CustomField>
    <fullName>Opp_Grant_App_Submitted_On__c</fullName>
    <label>Opp Grant App Submitted On</label>
    <type>Date</type>
</CustomField>