unpackaged/main/default/objects/Opportunity/fields/Opportunity_Grant_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Grant_Amount__c</fullName>
    <description>Verto-funded financial aid (not federal aid)</description>
    <label>Opportunity Grant Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>