unpackaged/main/default/objects/Opportunity/fields/Opportunity_Grant_App_Received__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Grant_App_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Checked the Student has submitted Opportunity Grant Application</description>
    <label>Opportunity Grant App Received</label>
    <type>Checkbox</type>
</CustomField>