unpackaged/main/default/objects/Opportunity/fields/Opportunity_Grant_Application__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Grant_Application__c</fullName>
    <description>This link is autogenerated by FormStack and includes the Opportunity Grant Application form.</description>
    <inlineHelpText>This link is autogenerated and can be emailed to students to complete the Opportunity Grant Application.</inlineHelpText>
    <label>z_Opportunity Grant Application</label>
    <type>Url</type>
</CustomField>