unpackaged/main/default/objects/Opportunity/fields/Opportunity_Grant_Application_Link__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Grant_Application_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://formstack.io/9C5D8&quot;, &quot;Opportunity Grant Application Link&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Grant Application Link</label>
    <type>Text</type>
</CustomField>