unpackaged/main/default/objects/Opportunity/fields/Original_Program__c.field-meta.xml
<CustomField>
    <fullName>Original_Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Represents the program that the student deposited for. After deposit, this field cannot be edited.</description>
    <inlineHelpText>Represents the program that the student deposited for</inlineHelpText>
    <label>Original Program</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Program__c.Location__r.Name</field>
            <operation>notEqual</operation>
            <value>UNDECIDED</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Opportunities (Original Program)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>