unpackaged/main/default/objects/Opportunity/fields/Other_reason_s_not_listed_above_Please__c.field-meta.xml
<CustomField>
    <fullName>Other_reason_s_not_listed_above_Please__c</fullName>
    <label>z_Other reason not listed above. Please</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>