unpackaged/main/default/objects/Opportunity/fields/Parent_Loan_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Parent_Loan_Amount_Paid__c</fullName>
    <label>Parent Loan Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>