unpackaged/main/default/objects/Opportunity/fields/Partner_College__c.field-meta.xml
<CustomField>
    <fullName>Partner_College__c</fullName>
    <label>z_Partner College</label>
    <length>100</length>
    <type>Text</type>
</CustomField>