unpackaged/main/default/objects/Opportunity/fields/Partner_School_1_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Partner_School_1_Acceptance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Partner School 1 Acceptance</label>
    <type>Checkbox</type>
</CustomField>