unpackaged/main/default/objects/Opportunity/fields/Partner_School_Choice_2_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Partner_School_Choice_2_Legacy__c</fullName>
    <description>This field is populated from the College Planning Form.</description>
    <inlineHelpText>This field is populated from the College Planning Form.</inlineHelpText>
    <label>z_Partner School Choice 2 (Legacy)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Verto_Partner_Schools</valueSetName>
    </valueSet>
</CustomField>