unpackaged/main/default/objects/Opportunity/fields/Partner_Schools_of_Interest_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Partner_Schools_of_Interest_Legacy__c</fullName>
    <description>This field is populated from the College Planning Form.</description>
    <inlineHelpText>This is a legacy field from submissions prior to 11-13-2020.</inlineHelpText>
    <label>z_Partner Schools of Interest (Legacy)</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>