unpackaged/main/default/objects/Opportunity/fields/Passport__c.field-meta.xml
<CustomField>
    <fullName>Passport__c</fullName>
    <label>Passport Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Has Passport</fullName>
            </value>
            <value>
                <fullName>Not Applied</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Needs to Renew</fullName>
            </value>
            <value>
                <fullName>Has Renewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>