unpackaged/main/default/objects/Opportunity/fields/Pay_in_Full_Discount__c.field-meta.xml
<CustomField>
    <fullName>Pay_in_Full_Discount__c</fullName>
    <label>Pay in Full Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>