unpackaged/main/default/objects/Opportunity/fields/Payment_Cancel_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Payment_Cancel_Boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Payment &amp; Cancel</label>
    <type>Checkbox</type>
</CustomField>