unpackaged/main/default/objects/Opportunity/fields/Payment_Due_Dates__c.field-meta.xml
<CustomField>
    <fullName>Payment_Due_Dates__c</fullName>
    <label>Payment Due Dates</label>
    <type>TextArea</type>
</CustomField>