unpackaged/main/default/objects/Opportunity/fields/Payment_Received_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Payment_Received_Boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Payment Received</label>
    <type>Checkbox</type>
</CustomField>