unpackaged/main/default/objects/Opportunity/fields/Payment_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Received_Date__c</fullName>
    <label>z_Payment Received Date</label>
    <type>Date</type>
</CustomField>