unpackaged/main/default/objects/Opportunity/fields/Payment_Terms_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Signed_Date__c</fullName>
    <label>z_Payment &amp; Terms Signed Date</label>
    <type>Date</type>
</CustomField>