unpackaged/main/default/objects/Opportunity/fields/Pell_Grant_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Pell_Grant_Amount_Paid__c</fullName>
    <label>Pell Grant Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>