unpackaged/main/default/objects/Opportunity/fields/Pending_Enrollment_Stage__c.field-meta.xml
<CustomField>
    <fullName>Pending_Enrollment_Stage__c</fullName>
    <label>Pending Enrollment Stage Date</label>
    <type>Date</type>
</CustomField>