unpackaged/main/default/objects/Opportunity/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>x_Persona</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alumni</fullName>
            </value>
            <value>
                <fullName>US High School Student</fullName>
            </value>
            <value>
                <fullName>International High School Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>