unpackaged/main/default/objects/Opportunity/fields/Prior_Pricing_Discount__c.field-meta.xml
<CustomField>
    <fullName>Prior_Pricing_Discount__c</fullName>
    <description>This is a discount applied for students who were told/advertised a cheaper tuition cost in the past and that tuition cost has since increased. This discount allows Verto to honor the previous tuition price.</description>
    <inlineHelpText>This discount allows Verto to honor a previous tuition price for the student, if the tuition has since increased</inlineHelpText>
    <label>Prior Pricing Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>