unpackaged/main/default/objects/Opportunity/fields/Private_Loan_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Private_Loan_Amount_Paid__c</fullName>
    <label>Private Loan Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>