unpackaged/main/default/objects/Opportunity/fields/Proficient_Languages_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Proficient_Languages_Legacy__c</fullName>
    <label>z_Proficient Languages (Legacy)</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>