unpackaged/main/default/objects/Opportunity/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <label>z_Program Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>